feat: :sparkles: add GetJWTOutput type
